login signup form

--- a/register.html
+++ b/register.html
@@ -10,8 +10,11 @@
     <div class="register-container">
         <h1>Register</h1>
         <form id="form">
+
+            <input type="text" id="name" class="input" placeholder="Enter your full name">
             <input type="email" id="email" class="input" placeholder="Enter your email">
             <input type="password" id="password" class="input" placeholder="Enter your password">
+            <input type="file" id="img" class="register-img">
             <button type="submit" class="button">Register</button>
         </form>
         <a href="./index.html" class="link">Already have an account? Login here</a>
