--- a/home.html
+++ b/home.html
@@ -1,20 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body class="home-background">
     <div class="home-container">
-        
+
         <div class="content">
-            <h1>Welcome to Your Website</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="./index.html" class="button">Logout</a>
+
+            <button class="logout">Log Out</button>
+        </div>
+        <div>
+            <h2 id="username"></h2>
+            <img id="profileImage" src="" width="100px" height="100px" alt="username">
+        </div>
+        <form id="form">
+            <input type="text" placeholder="Enter your Title" id="title">
+            <input type="text" placeholder="Enter your description" id="description">
+            <button type="submit">Submit</button>
+        </form>
+
+        <div id="card" class="container">
+            
         </div>
     </div>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <script type="module" src="home.js"></script>
 </body>
+
 </html>
